--- a/templates/client_app/update.html
+++ b/templates/client_app/update.html
@@ -7,7 +7,7 @@
 </head>
 <body>
     <h2>Update Client</h2>
-    <form>
+    <form method="POST">
         {% csrf_token %}
         <label>Name:</label>
         <input type ='text' name = 'name' value="{{client.name}}" required><br>
