--- a/templates/client_app/client_list.html
+++ b/templates/client_app/client_list.html
@@ -4,18 +4,54 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client List</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
 </head>
 <body>
-    <a href= "{% url 'client_create' %}">Add Client</a>
-    <a href= "{% url 'dashboard:home' %}">Dashbord</a>
+    <div class="container mt-5">
+        <h2>Client List</h2>
+
+        <!-- Correct Button ID -->
+        <button type='button' class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#clientModal">
+            View Client Details
+        </button>
+    </div>
+
+    <!-- Fixed Modal -->
+    <div class="modal fade" id="clientModal" tabindex="-1" aria-labelledby="clientModalLabel">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="clientModalLabel">Client Details</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <ul>
+                        {% for client in clients %}
+                            <li>
+                                {{ client.name }} - {{ client.phone_num }} - {{ client.address }}
+                            </li>
+                        {% endfor %}
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- Links -->
+    <a href="{% url 'client_create' %}">Add Client</a>
+    <a href="{% url 'dashboard:home' %}">Dashboard</a>
+
     <ul>
         {% for client in clients %}
             <li>
-                {{client.name}}-{{client.phone_num}}-{{client.address}}
-                <a href = "{% url 'client_update' client.id %}">Edit</a>
-                <a href = "{% url 'client_delete' client.id %}">Delete</a>
+                {{ client.name }} - {{ client.phone_num }} - {{ client.address }}
+                <a href="{% url 'client_update' client.id %}">Edit</a>
+                <a href="{% url 'client_delete' client.id %}">Delete</a>
             </li>
         {% endfor %}
     </ul>
+
+    <!-- Include Bootstrap JavaScript -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
