--- a/templates/client_app/client_list.html
+++ b/templates/client_app/client_list.html
@@ -5,6 +5,46 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Client List</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <script>
+        function print_name(){
+            alert("Wajahat Khan");
+        }
+        function logTwoTimesTable(){
+            for(let i=1; i<11; i++){
+                console.log(`2 * ${i} = ${ 2 * i }`)
+            }
+        }
+        function logMyName(){
+            for(let i=0; i<5; i++){
+                console.log("Waqas");
+            }
+        }
+        function hideDetailButton(){
+            document.querySelector("[data-bs-target='#clientModal']").style.display="none";
+        }
+        function send_ajax(){
+            $.ajax({
+                url: "{% url 'client_list_in_json' %}",
+                type: "GET",
+                data: {
+                    
+                },
+                success: function(response) {
+                    console.log(response);
+                    for(i=0; i< response.clients.length; i++){
+                        console.log(response.clients[i].name);
+                    }
+                          // Show success message
+                },
+                error: function(xhr) {
+                    alert("Error: " + xhr.responseText);
+                }
+            });
+        }
+        
+    </script>
+    
 </head>
 <body>
     <div class="container mt-5">
@@ -13,6 +53,25 @@
         <!-- Correct Button ID -->
         <button type='button' class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#clientModal">
             View Client Details
+        </button>
+
+        <button type='button' class="btn btn-primary" onclick="print_name()">
+            Print Name
+        </button>
+        <button type='button' class="btn btn-primary" onclick="send_ajax()">
+            send ajax
+        </button>
+
+        <button type='button' class="btn btn-primary" onclick="logMyName()">
+            Click Me
+        </button>
+
+        <button type='button' class="btn btn-primary" onclick="logTwoTimesTable()">
+            Print Table
+        </button>
+
+        <button type='button' class="btn btn-primary" onclick="hideDetailButton()">
+            Hide View Client Detail
         </button>
     </div>
 
@@ -53,5 +112,7 @@
 
     <!-- Include Bootstrap JavaScript -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+
 </body>
 </html>
