--- a/templates/client_app/client_list.html
+++ b/templates/client_app/client_list.html
@@ -14,13 +14,19 @@
     <div class="container mt-5">
         <h2>Client List</h2>
 
+
+        
+        <button  class="btn btn-success btn-sm delete-btn" 
+        data-bs-toggle="modal"
+        data-bs-target="#createClientModal">
+        Add Client
+        </button>
+
+
         <button type='button' class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#clientModal">
             View Client Details
         </button>
         
-        <button type='button' class="btn btn-primary" onclick="send_ajax()">
-            Send AJAX
-        </button>
 
         <button type='button' class="btn btn-primary" onclick="hideDetailButton()">
             Hide View Client Detail
@@ -52,6 +58,36 @@
                             <input type="text" class="form-control" id="client_address" name="address">
                         </div>
                         <button type="submit" class="btn btn-primary">Save Changes</button>
+                    </form>
+                </div>
+            </div>
+        </div>
+    </div>
+    <!-- Create Modal -->
+    <div class="modal fade" id="createClientModal" tabindex="-1" aria-labelledby="createClientModalLabel" aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="createClientModalLabel">Create Client</h5>
+                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                </div>
+                <div class="modal-body">
+                    <form id="createClientForm" method="POST">
+                        {% csrf_token %}
+                        <input type="hidden" id="client_id" name="client_id">
+                        <div class="mb-3">
+                            <label for="client_name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="client_name" name="name">
+                        </div>
+                        <div class="mb-3">
+                            <label for="client_phone" class="form-label">Phone Number</label>
+                            <input type="text" class="form-control" id="client_phone" name="phone_num">
+                        </div>
+                        <div class="mb-3">
+                            <label for="client_address" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="client_address" name="address">
+                        </div>
+                        <button type="submit" class="btn btn-primary">Create</button>
                     </form>
                 </div>
             </div>
@@ -112,7 +148,7 @@
             </div>
         </div>
     </div>
-
+{% comment %} Main page body {% endcomment %}
     <div class="container mt-4">
         <table id="clientTable" class="display table table-bordered table-striped">
             <thead>
@@ -155,7 +191,6 @@
     </div>
 
     <div class="d-flex justify-content-end mb-3">
-        <a href="{% url 'client_create' %}" class="btn btn-primary btn-sm me-2">Add Client</a>
         <a href="{% url 'dashboard:home' %}" class="btn btn-primary btn-sm">Dashboard</a>
     </div>
 
@@ -186,6 +221,8 @@
             }
         }
 
+        //Delete Client 
+
         function deleteClientDetails(clientId){
             if (clientsData[clientId]) {
                 console.log("Client Name:", clientsData[clientId].name);
@@ -203,9 +240,9 @@
                 console.log("filling copy modal with client id:", clientId);
 
                 $("#copyClientModal #client_id").val(clientsData[clientId].id).prop("readonly", true);
-                $("#copyClientModal #client_name").val(clientsData[clientId].name).prop("readonly", true);
+                $("#copyClientModal #client_name").val(clientsData[clientId].name + ' - copy').prop("readonly", true);
                 $("#copyClientModal #client_phone").val(clientsData[clientId].phone_num).prop("readonly", true);
-                $("#copyClientModal #client_address").val(clientsData[clientId].address).prop("readonly", true);
+                $("#copyClientModal #client_address").val(clientsData[clientId].address  + ' - copy').prop("readonly", true);
             }
         }
             
@@ -283,11 +320,32 @@
                 });
             });
         });
+        // create ajax
+        $(document).ready(function(){
+            $("#createClientForm").submit(function(e){
+                e.preventDefault();
+                let formData = $(this).serialize();
+                console.log(formData)
+                $.ajax({
+                    url: "{% url 'client_create' %}",
+                    type: 'POST',
+                    data : formData,
+                    success: function(response){
+                        alert("Client created successfully")
+                        location.reload();
+                    },
+                    error: function(xhr){
+                        alert("Error creating client.");
+                    }
+                });
+            });
+        });
 
         function hideDetailButton(){
             document.querySelector("[data-bs-target='#clientModal']").style.display="none";
         }
-
+        
+        
         function send_ajax(){
             $.ajax({
                 url: "{% url 'client_list_in_json' %}",
