--- a/templates/sitee/sitee_list.html
+++ b/templates/sitee/sitee_list.html
@@ -3,117 +3,115 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Customers List</title>
+    <title>Sitee</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.datatables.net/1.11.5/css/jquery.dataTables.min.css">
     <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 </head>
 <body>
-    <div class="text-center my-3">
-        <h2>Customers List</h2>
-    </div>
     <a href="{% url 'dashboard:home' %}" class="btn btn-primary btn-lg">
         <i class="fas fa-users"></i> Dashboard
     </a>
     <div class= "d-flex justify-content-between align-items-center my-3">
         <button  class="btn btn-success btn-sm delete-btn" 
         data-bs-toggle="modal"
-        data-bs-target="#createCustomerModal">
-        Add Customer
+        data-bs-target="#createSiteeModal">
+        Add Sitee
         </button>
     </div>
-    
 
-    {% comment %} Create Modal {% endcomment %}
-    <div class="modal fade" id="createCustomerModal" tabindex="-1" aria-labelledby="createCustomerModalLabel" aria-hidden="true">
+    <div class="modal fade" id="createSiteeModal" tabindex="-1" aria-labelledby="createSiteeModalLable" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
+                
+                <!-- 🔹 Modal Header -->
                 <div class="modal-header">
-                    <h5 class="modal-title" id="createCustomerModalLabel">Add Customer</h5>
+                    <h5 class="modal-title" id="modalTitle">Add Sitee</h5>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
+                
+                <!-- 🔹 Modal Body -->
                 <div class="modal-body">
-                    <form id="createCustomerForm" method="POST">
+                    <form id = createSiteeForm method = "POST">
                         {% csrf_token %}
                         <input type="hidden" id="client_id" name="client_id">
                         <div class="mb-3">
-                            <label for="customer_name" class="form-label">Name</label>
-                            <input type="text" class="form-control" id="customer_name" name="name">
+                            <label for="sitee_name" class="form-label">Name</label>
+                            <input type="text" class="form-control" id="sitee_name" name="name">
                         </div>
+
                         <div class="mb-3">
-                            <label for="customer_email" class="form-label">Email</label>
-                            <input type="text" class="form-control" id="customer_email" name="email">
+                            <label for="sitee_phone_num" class="form-label">Phone #</label>
+                            <input type="text" class="form-control" id="sitee_phone_num" name="phone_num">
                         </div>
+
                         <div class="mb-3">
-                            <label for="customer_address" class="form-label">Address</label>
-                            <input type="text" class="form-control" id="customer_address" name="address">
+                            <label for="sitee_address" class="form-label">Address</label>
+                            <input type="text" class="form-control" id="sitee_address" name="address">
                         </div>
-                        <div class="mb-3">
-                            <label for="customer_client" class="form-label">Client</label>
-                            <select class= "for control" id="customer_client" name= "client">
-                                <option value= "">Select Client</option>
-                                {%for client in clients %}
-                                    <option value="{{ client.id }}">{{ client.name }}</option>
-                                {%endfor%}
-                            </select>
-                        </div>
-                        <button type="submit" class="btn btn-primary">Create</button>
-                    </form>
+                        <select class= "for control" id="sitee_customer" name= "customer">
+                            <option value= "">Select Customer</option>
+                            {%for customer in customers %}
+                                <option value="{{ customer.id }}">{{ customer.name }}</option>
+                            {%endfor%}
+                        </select>
                 </div>
+                
+                <!-- 🔹 Modal Footer -->
+                <div class="modal-footer">
+                    <button type="submit" class="btn btn-primary">Add</button>
+                </div>
+    
             </div>
         </div>
     </div>
 
 
-    
     <div class="container mt-4">
         <table id="clientTable" class="display table table-bordered table-striped">
             <thead>
                 <tr>
                     <th>ID#</th>
                     <th>Name</th>
-                    <th>Email</th>
+                    <th>Phone #</th>
                     <th>Address</th>
-                    <th>Client</th>
+                    <th>Customer</th>
                 </tr>
             </thead>
             <tbody>
-                {% for customer in customers %}
+                {% for sitee in sitees %}
                 <tr>
-                    <td>{{ customer.id }}</td>
-                    <td>{{ customer.name }}</td>
-                    <td>{{ customer.email }}</td>
-                    <td>{{ customer.address }}</td>
-                    <td>{{ customer.client }}</td>
+                    <td>{{ sitee.id }}</td>
+                    <td>{{ sitee.name }}</td>
+                    <td>{{ sitee.phone_num }}</td>
+                    <td>{{ sitee.address }}</td>
+                    <td>{{ sitee.customer }}</td>
                 </tr>
                 {% endfor %}
             </tbody>
         </table>
     </div>
     <script>
+        var siteesData={}
 
-        var customersData = {};
-
-        {% for customer in customers%}
-            customersData["{{customer.id}}"]={
-                id: "{{customer.id}}",
-                name: "{{customer.name}}",
-                email: "{{customer.email}}",
-                address: "{{customer.address}}",
-                client: "{{customer.client.name}}",
-            };
+        {% for sitee in sitees %}
+            siteesData['{{sites.id}}']={
+                id: "{{sitee.id}}",
+                name: "{{sitee.name}}",
+                phone_num: "{{sitee.phone_num}}",
+                address: "{{sitee.address}}",
+                customer: "{{sitee.customer}}",
+            }
         {% endfor %}
-        console.log(customersData);
-        
-        
-        
+        console.log(siteesData)
+
         $(document).ready(function(){
-            $("#createCustomerForm").submit(function(e){
+            $("#createSiteeForm").submit(function(e){
                 e.preventDefault();
                 let formData= $(this).serialize();
                 console.log(formData)
                 $.ajax({
-                    url: "{% url 'customer_create' %}",
+                    url: "{% url 'sitee_create' %}",
                     type: "POST",
                     data : formData,
                     success: function(response){
@@ -125,7 +123,10 @@
                 });
             });
         });
+
+            
     </script>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 </body>
