add new features and pagination

--- a/templates/dashboard/dashboard.html
+++ b/templates/dashboard/dashboard.html
@@ -27,7 +27,12 @@
 
                 <!-- sitee Button -->
                 <a href="{% url 'sitee_list' %}" class="btn btn-primary btn-lg">
-                    <i class="fas fa-users"></i> View Sitee
+                    <i class="fas fa-users"></i> View Sitees
+                </a>
+
+                <!-- Asset Button -->
+                <a href="{% url 'asset_list' %}" class="btn btn-primary btn-lg">
+                    <i class="fas fa-users"></i> View Assets
                 </a>
             </div>
         </div>
