--- a/templates/sitee/sitee_list.html
+++ b/templates/sitee/sitee_list.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <div class="container mt-5">
-        <h4 class="mb-0">Asset List</h4>
+        <h4 class="mb-0">Sitee List</h4>
         <a href="{% url 'dashboard:home' %}" class="btn btn-primary btn-lg">
             <i class="fas fa-users"></i> Dashboard
         </a>
