--- a/templates/asset/asset_list.html
+++ b/templates/asset/asset_list.html
@@ -22,30 +22,68 @@
             Add Asset
         </button>
     </div>
-    
-    <div class= 'pagination'>
-        {% if current_page > 1 %}
-            <a href="?page={{current_page|add:'-1' }}" class="btn btn-outline-primary btn-sm">Previous</a>
-         {% endif %} 
+    <div class = 'container my-3'>
+        <form method = 'GET' id='filterForm' class="row g-2">
+            <!--client-->
+            <div class='col-md-3'>
+                <label for='client' class= 'form-label'>Client</label>
+                <select name = 'client' id='client' class='form-control'>
+                    <option value=''>All Clients</option>
+                    {% for client in clients %}
+                        <option value= '{{ client.id }}' {% if request.GET.client|default_if_none:"" == client.id|slugify %}selected{% endif %}>{{ client.name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
 
-        <span> Page {{ current_page }} of {{ total_pages }} </span>
+            <!--customer-->
+            <div class='col-md-3'>
+                <label for='customer' class= 'form-label'>Customer</label>
+                <select name = 'customer' id='customer' class='form-control'>
+                    <option value=''>All Customers</option>
+                    {% for customer in customers %}
+                        <option value= '{{ customer.id }}' {% if request.GET.customer|default_if_none:"" == customer.id|slugify %}selected{% endif %}>{{ customer.name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
 
-        {% if current_page < total_pages %}
-            <a href ="?page={{current_page|add:'1' }}" class= "btn btn-outline-primary btn-sm">Next</a>
-        {% endif %}
+            <!--sitee-->
+            <div class='col-md-3'>
+                <label for='sitee' class= 'form-label'>Sitee</label>
+                <select name = 'sitee' id='sitee' class='form-control'>
+                    <option value=''>All Sitee</option>
+                    {% for sitee in sitees %}
+                        <option value= '{{ sitee.id }}' {% if request.GET.sitee|default_if_none:"" == sitee.id|slugify %}selected{% endif %}>{{ sitee.name }}</option>
+                    {% endfor %}
+                </select>
+            </div>
+
+            <div class="col-md-3 d-flex align-items-end">
+                <button type="submit" class="btn btn-primary">Filter</button>
+                <a href="{% url 'asset_list' %}" class="btn btn-secondary ms-2">Reset</a>
+            </div>
+        </form>
+    </div>
+
+    <!--Pagination-->
+    <div class= 'pagination mt-3'>
+        <button id ="prevPage" class ='btn btn-outline-primary btn-xs' {% if current_page == 1 %} disabled {% endif %}>Previouse</button>
+        
+        <span id = 'paginationText'> Page {{current_page}} of {{total_pages}} </span>
+
+        <button id ="nextPage" class ='btn btn-outline-primary btn-xs' {% if current_page == total_pages %} disabled {% endif %}>Next</button>
     </div>
 
     <div class="modal fade" id="createAssetModal" tabindex="-1" aria-labelledby="createAssetModalLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
       
-            <!-- 🔹 Modal Header -->
+            <!-- Modal Header -->
             <div class="modal-header">
               <h5 class="modal-title" id="modalLabel">Add Asset</h5>
               <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
             </div>
       
-            <!-- 🔹 Modal Body -->
+            <!-- Modal Body -->
             <div class="modal-body">
                 <form id = 'createAssetForm' method ="POST">
                 {% csrf_token %}
@@ -65,8 +103,8 @@
                     </div>
 
                     <select class = 'form-control' name = 'sitee'>
-                        {% for asset in assets%}
-                            <option value='{{ asset.sitee.id }}'>{{asset.sitee.name}}</option>
+                        {% for sitee in sitees%}
+                            <option value='{{ sitee.id }}'>{{sitee.name}}</option>
                         {% endfor %}
                     </select>
                 
@@ -110,41 +148,97 @@
         </table>
     </div>
     <script>
-        var assetsData={}
 
+        var assetsData={}
+        
         {% for asset in assets %}
-            assetsData['{{asset.id}}']={
-                id: '{{asset.id}}',
+        assetsData['{{asset.id}}']={
+            id: '{{asset.id}}',
                 name: '{{asset.name}}',
                 phone_num: '{{asset.phone_num}}',
                 address: '{{asset.address}}',
                 sitee: '{{asset.sitee}}',
             }
         {% endfor %}
-        console.log(assetsData)
+        
+        let current_page = {{current_page}} ;
 
-        $(document).ready(function(){
-            $('#createAssetForm').submit(function(e){
-                e.preventDefault();
-                let formData= $(this).serialize();
-                $.ajax({
-                    url: "{% url 'asset_create' %}",
-                    type:"POST",
-                    data: formData,
-                    success: function(response){
-                        location.reload();
-                    },
-                    error: function(response){
-                        alert('Error in creating asset.');
-                    } 
-                });
+        function loadPage(page){
+            let formData = $('#filterForm').serialize() + "&page=" + page;
+            $.ajax({
+                url: "{% url 'asset_list' %}",
+                type:"GET",
+                headers:{
+                    'X-Requested-With': 'XMLHttpRequest'
+                },
+                data: formData,
+                success: function(response){
+                    updateTable(response.assets);
+                    updatePagination(response.current_page, response.total_pages);
+                    current_page = response.current_page;
+                },
+                error: function(response){
+                    alert('Error in filtering.');
+                } 
+            });
+        }
+
+        $('#prevPage').click(function(){
+            if (current_page > 1){
+                console.log('prevPage')
+                loadPage(current_page - 1);
+            }
+        });
+        
+        $('#nextPage').click(function(){
+            loadPage(current_page + 1);
+        });
+        
+        function updatePagination(current, total){
+            $('#paginationText').text(`Page ${current} of ${total}`);
+            current_page = current;
+
+            $('#prevPage').prop('disabled', current == 1);
+            $('#nextPage').prop('disabled', current >= total);
+        }
+
+        function updateTable(assets) {
+            let tableBody = $('#assetTable tbody');
+            tableBody.empty();
+
+            assets.forEach(asset => {
+                tableBody.append(`
+                    <tr>
+                        <td>${asset.id}</td>
+                        <td>${asset.name}</td>
+                        <td>${asset.phone_num}</td>
+                        <td>${asset.address}</td>
+                        <td>${asset.sitee__name}</td>
+                        <td>${asset.sitee__customer__name}</td>
+                        <td>${asset.sitee__customer__client__name}</td>
+                    </tr>
+                `);
+            });
+        }
+
+        $('#createAssetForm').submit(function(e){
+            e.preventDefault();
+            let formData= $(this).serialize();
+            $.ajax({
+                url: "{% url 'asset_create' %}",
+                type:"POST",
+                data: formData,
+                success: function(response){
+                    location.reload();
+                },
+                error: function(response){
+                    alert('Error in creating asset.');
+                } 
             });
         });
 
-
-
-    </script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+        </script>
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://cdn.datatables.net/1.11.5/js/jquery.dataTables.min.js"></script>
 </body>
 </html>
